--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="#services">Skills</a>
                     <a href="#Works">Projects</a>
                     <a href="#contact">Contact</a>
-                    <a href="https://github.com/SatyajayTech">GithubProfile</a>
+                    <a href="https://github.com/Satyajay">GithubProfile</a>
                     <a>GithubProfile</a>
                 </li>
             </ul>
@@ -105,7 +105,7 @@
                         creating impact through my developing skills and by solving their problem. I love coding and
                         specially Android & iOS App development using javascript framework.</p>
                     <div class="social">
-                        <a href="https://github.com/SatyajayTech"><img src="./images/github.svg" alt=""></a>
+                        <a href="https://github.com/Satyajay"><img src="./images/github.svg" alt=""></a>
                         <a href="https://www.facebook.com/CodeWithSatyajay/"><img src="./images/facebook.svg"
                                 alt=""></a>
                         <a href="https://twitter.com/SatyajayTech"><img src="./images/twitter.svg" alt=""></a>
@@ -257,7 +257,7 @@
                             <h2>WhatsApp Web App Clone</h2>
                             <p>This is a sample description for this project.
                             </p>
-                            <button class="btn btn-primary" onclick="location.href='https://github.com/SatyajayTech'">
+                            <button class="btn btn-primary" onclick="location.href='https://github.com/Satyajay'">
                                 View Code
                             </button>
                         </div>
@@ -267,7 +267,7 @@
                             <h2>Todo Web App</h2>
                             <p>This is a sample description for this project.
                             </p>
-                            <button class="btn btn-primary" onclick="location.href='https://github.com/SatyajayTech'">
+                            <button class="btn btn-primary" onclick="location.href='https://github.com/Satyajay'">
                                 View Code
                             </button>
                         </div>
@@ -282,7 +282,7 @@
                             <h2>Face Recognition</h2>
                             <p>This is a sample description for this project.
                             </p>
-                            <button class="btn btn-primary" onclick="location.href='https://github.com/SatyajayTech'">
+                            <button class="btn btn-primary" onclick="location.href='https://github.com/Satyajay'">
                                 View Code
                             </button>
                         </div>
@@ -293,7 +293,7 @@
                             <h2>Face Recognition</h2>
                             <p>This is a sample description for this project.
                             </p>
-                            <button class="btn btn-primary" onclick="location.href='https://github.com/SatyajayTech'">
+                            <button class="btn btn-primary" onclick="location.href='https://github.com/Satyajay'">
                                 View Code
                             </button>
                         </div>
@@ -345,8 +345,7 @@
     <footer>
         <h1 class="section-heading-white">Follow<span>Me</span></h1>
         <div class="footer-socials">
-            <a href="https://github.com/SatyajayTech"><img src="./images/github.svg" alt="" height="50px"
-                    width="50px"></a>
+            <a href="https://github.com/Satyajay"><img src="./images/github.svg" alt="" height="50px" width="50px"></a>
             <a href="https://www.facebook.com/CodeWithSatyajay/"><img src="./images/facebook.svg" alt="" height="50px"
                     width="50px"></a>
             <a href="https://twitter.com/SatyajayTech"><img src="./images/twitter.svg" alt="" height="50px"
